# Machine-Learning-Cplusplus

./: LICENSE  README.md
Decision Tree&Random Forest/: README.md
Decision Tree&Random Forest/src/: DecisionTree&RandomForest.cpp
Final Report/: 58_presentation.pptx  AIreport.md
Logistic Regression/: README.md
Logistic Regression/src/: LR.cpp
Multilayer Perception/: 15352285_RenLeida.md
Multilayer Perception/code/: MLP.cpp  preData_draw.ipynb
Naive Bayes&KNN/: README.md
Naive Bayes&KNN/src/: KNN_Classification.cpp  KNN_Regression.cpp  NB_Classfication.cpp  NB_Regression.cpp
Naive Bayes&KNN/src/DATA/: nb_cf.csv
Naive Bayes&KNN/src/DATA/regression_dataset/: .~validationчЫ╕хЕ│х║жшпДф╝░.xlsx  15352285_Renleida_KNN_regression.csv  15352285_Renleida_NB_regression.csv  validationчЫ╕хЕ│х║жшпДф╝░.xlsx
NaiveBayes+Adaboost/: Adaboost.cpp  Adaboost.hpp  CMakeLists.txt  MUL_DEFINE.h  NBAB.cpp  NBAB.hpp  README.md  main.cpp  nb.cpp  nb.hpp  textReader.cpp  textReader.hpp
PLA/: 15352285_RenLeida.md  README.md
PLA/img/: 15352285_RenLeida.md
PLA/src/code/: PLA_demo.cpp  PLA_initial_15352285.cpp  PLA_pocket_15352285.cpp  PLA_voting_15352285.cpp  PLA_voting_test.cpp  a.out  train.csv  valid_better.csv  valid_better_drop.csv  valid_pocket1.csv
PLA/src/data/: 15352285_renleida_PLA.csv
docs/: package-lock.json
text2matrix/: README.md
text2matrix/src/: a_b.txt  cr.sh  ma.txt  mb.txt  smatrix.txt
